tdf#99908: Use ctor that generates alternate gradient names

when a new gradient is created by modifying existent named gradient.
ODP import isn't coping with empty gradient names so well

Change-Id: I7a4ca32ccf58b22fc55ceeac8778029cd6d5cea3